[tool.poetry]
name = "stacklet.client.sinistral"
version = "0.5.30"
description = "Sinistral CLI"
authors = ["Sonny Shi <sonny@stacklet.io>"]
maintainers = ["Stacklet <hello@stacklet.io>"]
license = "Apache-2.0"
readme = "README.md"

[[tool.poetry.packages]]
include = "stacklet"

[tool.poetry.dependencies]
boto3 = "^1.26.72"
c7n-left = "0.3.30"
click = "^8.1.3"
codecov-cli = "^0.7.4"
jmespath = "^1.0.1"
jsonschema = "^4.17.3"
python = ">=3.10,<4"
pyjwt = "^2.6.0"
pyrsistent = "^0.19.3"
pyyaml = "^6.0"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.0"
ipdb = "^0.13.13"
jsonref = "^1.1.0"
moto = { extras = ["cognito-idp"], version = "^4.1.3" }
pre-commit = "^3.1.0"
python-jose = "^3.3.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
ruff = "^0.6.3"
semver = "^3.0.4"
tomlkit = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sinistral = "stacklet.client.sinistral.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Add `line-too-long` and isort to the enforced rule set.
extend-select = ["E501", "I"]

[tool.ruff.lint.per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
# Use a single line between direct and from import.
lines-between-types = 1
lines-after-imports = 2
