[project]
name = "stacklet.client.sinistral"
version = "0.5.34"
description = "Sinistral CLI"
authors = [{ name = "Stacklet", email = "hello@stacklet.io" }]
requires-python = ">=3.10.2,<4"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "c7n-left==0.3.34",
    # We pin to the exact versions used by c7n for compatibility purposes
    "botocore==1.40.69",
    "boto3==1.40.69",
    # Other dependencies
    "click>=8.1.3,<9",
    "codecov-cli>=11.1.0,<12",
    "jmespath>=1.0.1,<2",
    "jsonschema>=4.17.3,<5",
    "pyjwt>=2.6.0,<3",
    "pyrsistent>=0.20,<0.21",
    "pyyaml~=6.0",
    "requests>=2.28.2,<3",
]

[project.scripts]
sinistral = "stacklet.client.sinistral.cli:main"

[dependency-groups]
dev = [
    "coverage>=7.2.0,<8",
    "ipdb>=0.13.13,<0.14",
    "jsonref>=1.1.0,<2",
    "moto[cognitoidp]>=5,<6",
    "pre-commit>=4.3.0,<5",
    "pytest-cov>=7,<8",
    "pytest>=8,<9",
    "python-jose>=3.3.0,<4",
    "ruff>=0.13.0",
    "semver>=3.0.4,<4",
    "tomlkit>=0.13.2,<0.14",
]

[tool.hatch.build.targets.sdist]
include = ["stacklet"]

[tool.hatch.build.targets.wheel]
include = ["stacklet"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Add `line-too-long` and isort to the enforced rule set.
extend-select = ["E501", "I"]

[tool.ruff.lint.per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
# Use a single line between direct and from import.
lines-between-types = 1
lines-after-imports = 2
